# maybe-extension

./: .gitignore  CMakeLists.txt  README-zh.md  README.md  example.cpp
examples/: CMakeLists.txt  convertor.cpp  fallible_operations.cpp  member_pointer_sugar.cpp  method_overload_selector.cpp  operator_bind.cpp  optional_chaining.cpp  pointers.cpp
include/maybe_ext/: and.hpp  and_then.hpp  as_unowned.hpp  cloned.hpp  contains.hpp  deref.hpp  filter.hpp  flatten.hpp  map.hpp  map_or.hpp  map_or_else.hpp  maybe_ext.hpp  operator_bind.hpp  or.hpp  or_else.hpp  utils.hpp  value_or.hpp  value_or_else.hpp  xor.hpp
include/maybe_ext/detail/: make_none.hpp  member_ptr_adaptor.hpp  type_check.hpp
scripts/: main.py  single_header.py  tests.py
single_include/maybe_ext/: maybe_ext.hpp
tests/: CMakeLists.txt  and_test.cpp  and_then_test.cpp  as_unowned_test.cpp  cloned_test.cpp  contains_test.cpp  convertor_test.cpp  deref_test.cpp  examples_test.cpp  field_ptr_test.cpp  filter_test.cpp  flatten_test.cpp  map_or_else_test.cpp  map_or_test.cpp  map_test.cpp  maybe_test.cpp  method_ptr_overload_test.cpp  method_ptr_return_ref_test.cpp  operator_bind_test.cpp  or_else_test.cpp  or_test.cpp  prelude.hpp  value_or_else_test.cpp  value_or_test.cpp  xor_test.cpp
