project(maybe_examples)

add_executable(example_convertor convertor.cpp)

add_executable(example_fallible_operations fallible_operations.cpp)

add_executable(example_member_pointer member_pointer_sugar.cpp)

add_executable(example_method_overload method_overload_selector.cpp)

add_executable(example_operator_bind operator_bind.cpp)

add_executable(example_optional_chaining optional_chaining.cpp)

add_executable(example_pointers pointers.cpp)
